fix to vertical text on mobile

--- a/src/components/pages/scorigami/components/table/ScorigamiTable.css
+++ b/src/components/pages/scorigami/components/table/ScorigamiTable.css
@@ -50,10 +50,9 @@
 
 .vertical {
 	white-space: nowrap;
-	writing-mode: vertical-rl;
-	transform: rotate(180deg);
-	padding-top: 0px;
-	padding-bottom: 0px;
+	transform: rotate(270deg);
+	transform-origin: center center;
+	padding-right: 5px;
 	width: 25px;
 	min-width: 25px;
 }
@@ -94,4 +93,11 @@ th {
 }
 td {
 	font-size: 8px;
+}
+
+/* When the viewport is smaller than 768px (typical tablet/mobile breakpoint) */
+@media (max-width: 768px) {
+	.table-container {
+		width: 100%;
+	}
 }
